--- a/style.css
+++ b/style.css
@@ -32,3 +32,74 @@
   --LT-text-gray: hsl(228, 12%, 44%);
   --LT-text-blue: hsl(230, 17%, 14%);
 }
+
+body {
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+  overflow-x: hidden;
+}
+/* MAIN GRID SET-UP */
+.container {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(200px, 1fr));
+  grid-template-rows: 1fr 5fr 1fr 5fr;
+  grid-template-areas: 
+    "header toggle"
+    "overview overview"
+    "subheader subheader"
+    "detail detail";
+  padding: 2% 10% 5% 10%;
+  height: 100%;
+  width: 100%;
+}
+
+.header {
+  grid-area: header;
+}
+.toggle {
+  grid-area: toggle;
+  justify-self: end;
+}
+.overview {
+  grid-area: overview;
+}
+
+.subheader {
+  grid-area: subheader;
+  align-self: center;
+}
+
+.detail {
+  grid-area: detail;
+}
+
+
+/* OVERVIEW LAYOUT */
+.overview {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 1.5rem;
+}
+
+/* CARD AND ELEMENTS STYLING */
+.card {
+  background-color: var(--LT-text-gray);
+  display: grid;
+  justify-content: space-around;
+}
+
+.card .SM-icon {
+  display: inline-block;
+}
+
+
+/* DETAIL LAYOUT */
+.detail {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-gap: 1.5rem;
+}
+
+.mini-card {
+  background-color: var(--LT-text-gray);
+}
