--- a/style.css
+++ b/style.css
@@ -1,23 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
 :root {
   --Lime-Green: hsl(163, 72%, 41%);
   --Bright-Red: hsl(356, 69%, 56%);
 
   --Facebook: hsl(208, 92%, 53%);
   --Twitter: hsl(203, 89%, 53%);
-  --Instagram: linear gradient hsl(37, 97%, 70%) to hsl(329, 70%, 58%);
+  --Instagram: linear-gradient(to right, hsl(37, 97%, 70%), hsl(329, 70%, 58%));
   --Youtube: hsl(348, 97%, 39%);
 
   
   /* DARK THEME */
-  --DT-toggle: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%);
+  --DT-toggle: linear-gradient(hsl(210, 78%, 56%), hsl(146, 68%, 55%));
   --DT-BG: hsl(230, 17%, 14%);
   --DT-Top-BG-Pattern: hsl(232, 19%, 15%);
   --DT-Card-BG: hsl(228, 28%, 20%);
@@ -33,10 +27,26 @@
   --LT-text-blue: hsl(230, 17%, 14%);
 }
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Inter', sans-serif;
   font-size: 14px;
   overflow-x: hidden;
+  background-color: var(--LT-BG);
+}
+
+body::before {
+  height: 30vh;
+  width: 100%;
+  background-color: var(--LT-BG-pattern);
+  z-index: -2;
+  content: '';
+  position: absolute;
 }
 /* MAIN GRID SET-UP */
 .container {
@@ -81,6 +91,15 @@ body {
   grid-gap: 1.5rem;
 }
 
+/* Header STYLES */
+.header h1 {
+  color: var(--LT-text-blue);
+}
+
+.header h5 {
+  color: var(--LT-text-gray);
+}
+
 /* CARD AND ELEMENTS STYLING */
 .card {
   background-color: var(--LT-Card-BG);
@@ -90,6 +109,38 @@ body {
   width: 100%;
 }
 
+.facebook {
+  border-top: 4px solid var(--Facebook);
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+.twitter {
+  border-top: 4px solid var(--Twitter);
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
+/* This was the best way I could find to get the instagram linear gradient to work as a border */
+.instagram {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  padding: 4px 0 0 0;
+  border-top: 4px solid transparent;
+  background: 
+    linear-gradient(to right, var(--LT-Card-BG), var(--LT-Card-BG)),
+    var(--Instagram);
+  background-clip: padding-box, border-box;
+  background-origin: padding-box, border-box;
+}
+
+
+.youtube {
+  border-top: 4px solid var(--Youtube);
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+}
+
 .tag {
   justify-self: center;
   align-self: center;
@@ -97,13 +148,24 @@ body {
 
 .SM-number {
   font-size: 3.5rem;
+  justify-self: center;
 }
 
 .followers {
   align-self: start;
   text-transform: uppercase;
   letter-spacing: 4px;
-  color: var(--LT-text-gray)
+  color: var(--LT-text-gray);
+  justify-self: center;
+}
+
+.daily-number {
+  justify-self: center;
+  color: var(--Lime-Green);
+}
+
+.daily-number .down-icon {
+  color: var(--Bright-Red);
 }
 
 
