--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
   
   /* DARK THEME */
-  --DT-toggle: linear-gradient(hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+  --DT-toggle: linear-gradient(to right, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
   --DT-BG: hsl(230, 17%, 14%);
   --DT-Top-BG-Pattern: hsl(232, 19%, 15%);
   --DT-Card-BG: hsl(228, 28%, 20%);
@@ -100,10 +100,75 @@ body::before {
   color: var(--LT-text-gray);
 }
 
+.toggle h4 {
+  display: inline-block;
+  align-self: center;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-image: var(--DT-toggle);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px blue;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
 /* CARD AND ELEMENTS STYLING */
 .card {
   background-color: var(--LT-Card-BG);
   display: grid;
+  grid-template-columns: 1fr;
   grid-template-rows: repeat(4, 1fr);
   justify-content: center;
   width: 100%;
@@ -146,6 +211,15 @@ body::before {
   align-self: center;
 }
 
+.tag img {
+  position: absolute;
+  transform: translate(-250%, -20%);
+}
+.tag span {
+  position: absolute;
+  transform: translate(-20%, -15%);
+}
+
 .SM-number {
   font-size: 3.5rem;
   justify-self: center;
@@ -161,7 +235,18 @@ body::before {
 
 .daily-number {
   justify-self: center;
+  align-self: start;
   color: var(--Lime-Green);
+}
+
+.daily-number img {
+  position: absolute;
+  transform: translate(-500%, 250%);
+}
+
+.daily-number span {
+  position: absolute;
+  transform: translate(-35%, 20%);
 }
 
 .daily-number .down-icon {
@@ -180,5 +265,5 @@ body::before {
 }
 
 .mini-card {
-  background-color: var(--LT-text-gray);
+  background-color: var(--LT-Card-BG);
 }
